--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://slokvaghasiya.github.io/iphone-3D-Intro",
   "name": "iphone-3d",
   "private": true,
   "version": "0.0.0",
@@ -18,6 +19,7 @@
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.1",
     "three": "^0.166.0"
   },
   "devDependencies": {
