[ Make Some Changes in vite.config ]

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://slokvaghasiya.github.io/iphone-3D-Intro",
+  "homepage": "https://slokvaghasiya.github.io/iphone-3D",
   "name": "iphone-3d",
   "private": true,
   "version": "0.0.0",
